# Mistral

./: README.md  chain_train.sh  pyproject.toml  train.sh  train.slurm
src/: __init__.py  config.py  evaluate.py  model.py  train.py
test/: test_config.py  test_evaluate.py  test_model.py  test_train.py
