[project]
name = "longformer"
version = "0.1.0"
description = "Mistral model for long cipher decoding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.0",
    "levenshtein>=0.27.3",
    "liger-kernel>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.report]
exclude_also = [
	"if 0:",
    "if __name__ == .__main__.:",
	"import",
	"from",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
